--- a/.github/workflows/mac_native.yml
+++ b/.github/workflows/mac_native.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build-mac-native:
 
-    runs-on: macos-latest
+    runs-on: macos-13
     
     steps:
     - uses: actions/checkout@master
